feat: add response data type to swagger
